# hercules

./: .hercules.yml  haskell-packages.nix  hercules-module.nix  pkgs.nix  release.nix
backend/: default.nix  example-config.yaml  hercules.cabal
backend/app/: Main.hs  hercules-init.hs  hydra-eval-jobset.hs
backend/gen-elm/: Main.hs
backend/scripts/: hydra-eval-jobset.hs
backend/src/Data/Aeson/: Extra.hs
backend/src/Data/ByteString/: Extra.hs
backend/src/GitHub/Data/: Extra.hs
backend/src/GitHub/Endpoints/: Extra.hs
backend/src/Hercules/: API.hs  Config.hs  Keys.hs  Lib.hs  OAuth.hs  ServerEnv.hs  Swagger.hs  Util.hs
backend/src/Hercules/Database/: Extra.hs  Hercules.hs  Hydra.hs
backend/src/Hercules/Database/Hercules/: Migration.hs
backend/src/Hercules/Evaluate/: Fetch.hs  Jobset.hs  ReleaseExpr.hs  Service.hs  Spec.hs  Types.hs
backend/src/Hercules/Hooks/: GitHub.hs
backend/src/Hercules/Input/: Git.hs  NixHelper.hs
backend/src/Hercules/OAuth/: Authenticators.hs  Types.hs
backend/src/Hercules/OAuth/Authenticators/: GitHub.hs  Google.hs
backend/src/Hercules/Query/: Hercules.hs  Hydra.hs
backend/src/Hercules/Sync/: GitHub.hs
backend/src/Nix/: Store.hs
backend/src/Servant/: Redirect.hs
backend/src/migrations/: 001-create-users.sql  002-create-repos.sql  003-create-jobsets.sql  004-create-hydra-build.sql  005-create-hydra-views.sql  006-github-app.sql  007-create-hydra-triggers.sql  create-hydra-views.sql  create-repos.sql
backend/test/: AppMBCSpec.hs  BuildSpecSpec.hs  GitHubAppSpec.hs  GitHubOAuthSpec.hs  GitHubWebHookSpec.hs  JobsetSpec.hs  TestEnv.hs  github-app.pem
backend/test/data/: integration.json  webhook-ping.json
frontend/: default.nix
